--- a/ProiectMaster.Web/Views/ProductType/Index.cshtml
+++ b/ProiectMaster.Web/Views/ProductType/Index.cshtml
@@ -20,7 +20,7 @@
     </div>
 </div>
 
-<table id="table" class="table table-hover table-striped table-dark">
+<table id="table" class="table table-hover table-striped table-info">
     <thead>
         <tr>
             <th hidden>Product Type Id</th>
