--- a/ProiectMaster.Web/Views/OrdersProducts/Index.cshtml
+++ b/ProiectMaster.Web/Views/OrdersProducts/Index.cshtml
@@ -26,7 +26,7 @@
 <br />
 <br />
 
-<table id="table" class="table table-hover table-striped table-dark">
+<table id="table" class="table table-hover table-striped table-info">
     <thead>
         <tr>
             <th hidden>Order Id</th>
