--- a/ProiectMaster.Web/Views/Product/Index.cshtml
+++ b/ProiectMaster.Web/Views/Product/Index.cshtml
@@ -22,7 +22,7 @@
 
 <br/><br/>
 
-     <table id="table" class="table table-hover table-striped table-dark">
+     <table id="table" class="table table-hover table-striped table-info">
          <thead>
              <tr>
                  <th hidden>Product Id</th>
